--- a/src/main/webapp/member.html
+++ b/src/main/webapp/member.html
@@ -147,7 +147,7 @@
                 type: 2,
                 title: "新增",
                 content: './iframe_member_add.html?id=null',
-                area: ['820px', '520px'],
+                area: ['820px', '520px']
             });
         });
 
